--- a/views/daschboard.handlebars
+++ b/views/daschboard.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <div>
+    <div id="dashboards-posts">
         <ul>
             {{#each posts as |post|}}
             <li id="{{post.id}}">
@@ -11,17 +11,17 @@
     </div>
     <div>
         <h2>Create A New Post</h2>
-        <form>
+        <form class="create-post-form">
             <div>
                 <label for="post-title">Title:</label>
-                <input type="text"/>
+                <input type="text" id="post-title"/>
             </div>
             <div>
                 <label for="post-content">Content:</label>
-                <textarea type="password"></textarea>
+                <textarea type="password" id="post-content"></textarea>
             </div>
             <div>
-                <button type="submit">Create</button>
+                <button type="submit" id="new-post">Create</button>
             </div>
         </form>
     </div>
