--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,14 +1,14 @@
 <div>
     <div>
         <h2>Login</h2>
-        <form>
+        <form class="login-form">
             <div>
                 <label for="username-login">Usernmae:</label>
-                <input type="text"/>
+                <input type="text" id="username-login"/>
             </div>
             <div>
                 <label for="password-login">Password:</label>
-                <input type="password"/>
+                <input type="password" id="password-login"/>
             </div>
             <div>
                 <button type="submit">Login</button>
