--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,14 +1,14 @@
 <div>
     <div>
         <h2>Signup</h2>
-        <form>
+        <form class="signup-form">
             <div>
                 <label for="username-signup">Username</label>
-                <input type="text"/>
+                <input type="text" id="username-signup"/>
             </div>
             <div>
                 <label for="password-signup">Password</label>
-                <input type="password"/>
+                <input type="password" id="password-signup"/>
             </div>
             <div>
                 <button type="submit">Sign Up</button>
